--- a/module2/index.html
+++ b/module2/index.html
@@ -1,3 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<\html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Coursera module 2 project</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <h1>
+            I am the heading
+        </h1>
+        <div class="row">
+            <div class="col-dt-4 col-tb-6 col-mb-12">
+                <p>I am the first row</p>
+            </div>
+            <div class="col-dt-8 col-tb-12 col-mb-12">
+                <p>I am the second row</p>
+            </div>
+            <div class="col-dt-12 col-tb-12 col-mb-12">
+                <p>I am the third row</p>
+            </div>
+        </div>
+    </body>
+</html>
