--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>
-            I am the heading
+            This repository contains my Coursera projects
         </h1>
     </body>
 </html>
