--- a/module2/index.html
+++ b/module2/index.html
@@ -12,13 +12,13 @@
         </h1>
         <div class="row">
             <div class="col-dt-4 col-tb-6 col-mb-12">
-                <p>I am the first row</p>
+                I am the first row
             </div>
             <div class="col-dt-8 col-tb-12 col-mb-12">
-                <p>I am the second row</p>
+                I am the second row
             </div>
             <div class="col-dt-12 col-tb-12 col-mb-12">
-                <p>I am the third row</p>
+                I am the third row
             </div>
         </div>
     </body>
