--- a/module2/index.html
+++ b/module2/index.html
@@ -12,7 +12,7 @@
         </h1>
         <div class="row">
             <div class="col-dt-4 col-tb-6 col-mb-12">
-                I am the first row
+                <p>I am the first row</p>
             </div>
             <div class="col-dt-8 col-tb-12 col-mb-12">
                 I am the second row
