--- a/module2/index.html
+++ b/module2/index.html
@@ -7,18 +7,16 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1>
-            I am the heading
-        </h1>
+        <h1>I am the heading</h1>
         <div class="row">
             <div class="col-dt-4 col-tb-6 col-mb-12">
                 <p>I am the first row</p>
             </div>
-            <div class="col-dt-8 col-tb-12 col-mb-12">
-                I am the second row
+            <div class="col-dt-4 col-tb-6 col-mb-12">
+                <p>I am the second row</p>
             </div>
-            <div class="col-dt-12 col-tb-12 col-mb-12">
-                I am the third row
+            <div class="col-dt-4 col-tb-6 col-mb-12">
+                <p>I am the third row</p>
             </div>
         </div>
     </body>
