--- a/module2/index.html
+++ b/module2/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>mod2 Coursera project</title>
+        <title>m2 Coursera project</title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
