--- a/module2/index.html
+++ b/module2/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1>I am the heading</h1>
+        <h1>I am the heading for this responsive design test </h1>
         <div class="row">
             <div class="col-dt-4 col-tb-6 col-mb-12">
                 <p>I am the first row</p>
