--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>
             This repository contains my Coursera projects
         </h1>
+        <a href="module2/index.html"> Module2 </a>
     </body>
 </html>
