--- a/module2/index.html
+++ b/module2/index.html
@@ -7,16 +7,19 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1>I am the heading for this responsive design test </h1>
+        <h1>Our menu</h1>
         <div class="row">
             <div class="col-dt-4 col-tb-6 col-mb-12">
-                <p>I am the first row</p>
+                <div class="mtitle" style=background-color:pink;>Chicken</div>
+                <p>I am the first row, I am the first row, I am the first row, I am the first row, I am the first row</p>
             </div>
             <div class="col-dt-4 col-tb-6 col-mb-12">
-                <p>I am the second row</p>
+                <div class="mtitle" style="background-color:red; color:white">Beef</div>
+                <p>I am the second row, I am the second row, I am the second row, I am the second row</p>
             </div>
             <div class="col-dt-4 col-tb-6 col-mb-12">
-                <p>I am the third row</p>
+                <div class="mtitle" style=background-color:yellow;>Sushi</div>
+                <p>I am the third row, I am the third row, I am the third row, I am the third row, I am the third row</p>
             </div>
         </div>
     </body>
