--- a/module2/index.html
+++ b/module2/index.html
@@ -10,15 +10,15 @@
         <h1>Our menu</h1>
         <div class="row">
             <div class="col-dt-4 col-tb-6 col-mb-12">
-                <div class="mtitle" style=background-color:pink;>Chicken</div>
+                <div class="msection1">Chicken</div>
                 <p>I am the first row, I am the first row, I am the first row, I am the first row, I am the first row</p>
             </div>
             <div class="col-dt-4 col-tb-6 col-mb-12">
-                <div class="mtitle" style="background-color:red; color:white">Beef</div>
+                <div class="msection2">Beef</div>
                 <p>I am the second row, I am the second row, I am the second row, I am the second row</p>
             </div>
-            <div class="col-dt-4 col-tb-6 col-mb-12">
-                <div class="mtitle" style=background-color:yellow;>Sushi</div>
+            <div class="col-dt-4 col-tb-12 col-mb-12">
+                <div class="msection3">Sushi</div>
                 <p>I am the third row, I am the third row, I am the third row, I am the third row, I am the third row</p>
             </div>
         </div>
