--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>
             This repository contains my Coursera projects
         </h1>
-        <a href="module2/index.html" title="module link"> Module2 </a>
+        <a href="module2/index.html" title="module 2 link"> Module2 </a>
+        <a href="module3/index.html" title="module 3 link"> Module3 </a>
     </body>
 </html>
